@@ -1,3 +1,9 @@
+2008-12-15  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>
+
+    * src/samplerate.c
+    Move variable definition out one scope level to avoid warnings from static
+    analysis tools. Thanks Erik Hovland.
+
 2008-12-13  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>
 
     * tests/multichan_throughput_test.c
